2008-07-29  Massimiliano Mantione  <massi@ximian.com>
	* mini.c (sigprof_signal_handler): call the new "runtime initialized"
	profiler hook.

	Backported from trunk (r108631).

2008-07-27  Zoltan Varga  <vargaz@gmail.com>

	* debug-mini.c (mono_debug_close_method): Avoid a crash if jit->this_var
	is not set.

2008-07-25  Martin Baulig  <martin@ximian.com>

	* debug-debugger.c
	(debugger_get_boxed_object): GC-protect the last 16 objects.
	(debugger_runtime_invoke): Likewise.

2008-07-24  Zoltan Varga  <vargaz@gmail.com>

	* aot-runtime.c aot-compiler.c: Merge with the version in HEAD.
	
2008-07-24  Mark Probst  <mark.probst@gmail.com>

	* mini-exceptions.c: Free a MonoType with
	mono_metadata_free_type() instead of g_free().

	* aot-runtime.c: Free a MonoType.

	Backported from trunk.

2008-07-24  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c (mono_arch_call_opcode) : Winx64 fix.  Use the size
	  variable computed above as the copy length for arguments of storage
	  type ArgValuetypeAddrInIReg.

	Contributed under MIT/X11 license.

2008-07-24  Bill Holmes  <billholmes54@gmail.com>

	* mini-amd64.c (mono_arch_emit_prolog) : Winx64 fix.  When omitting the
	  frame pointer the stack adjustment value must be saved to the unwind 
	  info structure.

	Contributed under MIT/X11 license.

2008-07-23  Martin Baulig  <martin@ximian.com>

	* debug-mini.c (mono_debug_close_method): Check
	`MONO_INST_IS_DEAD' for `this'.

2008-07-22  Bill Holmes  <billholmes54@gmail.com>

	* inssel-amd64.brg :  Adding rules for OP_VTARG_ADDR that are used for
	  Winx64 struct arguments.

	* mini-amd64.c (mono_arch_allocate_vars) : Implementing the ArgValuetypeAddrInIReg
	  argument case.  Setting the argument op to OP_VTARG_ADDR (OP_REGOFFSET)).

	* mini-amd64.c (mono_arch_emit_prolog, emit_load_volatile_arguments) :
 	  Implementing the ArgValuetypeAddrInIReg argument case.  When the address
 	  of a struct is passed in a register it must be saved with the other