@@ -1,3 +1,9 @@
+2008-07-31  Bill Holmes  <billholmes54@gmail.com>
+
+	* aot-compiler.c : Backport of r108759.  Fix win32 build.
+
+	Contributed under MIT/X11 license.
+
 2008-07-29  Massimiliano Mantione  <massi@ximian.com>
 	* mini.c (sigprof_signal_handler): call the new "runtime initialized"
 	profiler hook.
